infra/mysql/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: monitoring
  labels:
    app: adminer
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: adminer
