infra/mysql/adminer-ingress.yaml
---
# Adminer IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adminer-ingress
  namespace: db
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mysql.tickget.kr`)
      services:
        - name: adminer-service
          port: 8080
  tls:
    secretName: mysql-tickget-kr-tls
